# mipt_RL

./: README.md  pyproject.toml
hw1/: README.md  task_1.md  task_2.py  task_2_results.json  task_3.md
hw1/mdp_taxi_v1/: taxi3_wrapper.py
hw1/mdp_taxi_v2/: transportation_env.py  transportation_mdp.py
hw2/: README.md  dqn_atari_homework.py
hw2/artifacts/: dqn_summary.csv  dqn_summary.json
hw2/artifacts/configs/: freeway_run_config.json  pong_run_config.json
hw2/artifacts/eval_logs/: freeway_eval_history.csv  pong_eval_history.csv
hw2/artifacts/eval_logs/freeway/: evaluations.npz
hw2/artifacts/eval_logs/pong/: evaluations.npz
