[project]
name = "mipt-rl"
version = "0.1.0"
description = "MIPT RL homework repository"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium[accept-rom-license,atari]>=1.2.3",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "pandas>=3.0.1",
    "ruff>=0.15.8",
    "sb3-contrib>=2.8.0",
    "stable-baselines3>=2.7.1",
    "torch>=2.11.0",
]
